commit geral