@@ -15,6 +15,10 @@
 	<groupId>br.edu.unoesc.pessoaservice.application</groupId>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-consul-all</artifactId>
+		</dependency>
 		<!-- project dependencies -->
 		<dependency>
 			<groupId>br.edu.unoesc.pessoaservice.business</groupId>
@@ -35,9 +39,69 @@
 			<artifactId>sistema-utils-arquitetura-application</artifactId>
 			<groupId>br.edu.unoesc.sistemautils.arquitetura.application</groupId>
 			<version>${sistema-utils.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.cloud</groupId>
+					<artifactId>spring-cloud-starter-config</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.springframework.cloud</groupId>
+					<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<!-- architecture dependencies -->
 	</dependencies>
+
+	<profiles>
+		<profile>
+			<id>docker</id>
+			<build>
+			<finalName>${project.name}</finalName>
+				<plugins>
+					<plugin>
+						<groupId>com.spotify</groupId>
+						<artifactId>dockerfile-maven-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>default</id>
+								<goals>
+									<goal>build</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<repository>${docker-repository.properties}/${project.name}</repository>
+							<tag>${project.version}</tag>
+							<skipDockerInfo>${docker-info.properties}</skipDockerInfo>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-maven-plugin</artifactId>
+						<configuration>
+							<release>${java.version}</release>
+							<compilerArgs>${compiler-args.propeties}</compilerArgs>
+						</configuration>
+						<executions>
+							<execution>
+								<id>repackage</id>
+								<goals>
+									<goal>repackage</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>build-info</id>
+								<goals>
+									<goal>build-info</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 
 	<build>
 		<finalName>${project.name}</finalName>
@@ -47,7 +111,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<release>${java.version}</release>
-					<compilerArgs>--enable-preview</compilerArgs>
+					<compilerArgs>${compiler-args.propeties}</compilerArgs>
 				</configuration>
 				<executions>
 					<execution>
@@ -59,28 +123,10 @@
 					<execution>
 						<id>build-info</id>
 						<goals>
-                        	<goal>build-info</goal>
-                    	</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>com.spotify</groupId>
-				<artifactId>dockerfile-maven-plugin</artifactId>
-				<version>${dockerfile-spotify.version}</version>
-				<executions>
-					<execution>
-						<id>default</id>
-						<goals>
-							<goal>build</goal>
+							<goal>build-info</goal>
 						</goals>
 					</execution>
 				</executions>
-				<configuration>
-					<repository>isacalmeida/${project.name}</repository>
-					<tag>${project.version}</tag>
-					<skipDockerInfo>true</skipDockerInfo>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
